@@ -101,3 +101,6 @@
 - Version: 25 (MinAcceptedVersion: 24)
     - Add locking strength and wait policy fields to TableReader, JoinReader,
       IndexSkipTableReader, and InterleavedReaderJoiner spec.
+- Version: 26 (MinAcceptedVersion: 26)
+    - Change the table encoding for ARRAY types to differentiate between
+      NULL and ARRAY[NULL].
